--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,7 +1,7 @@
-book_filename: "bookdown-start"
+book_filename: "price-analysis"
 chapter_name: "Chapter "
-repo: https://github.com/seankross/bookdown-start
+repo: https://github.com/mindymallory/PriceAnalysis
 output_dir: docs
-rmd_files: ["index.Rmd", "01-Introduction.Rmd", "02-Diving-In.Rmd"]
+rmd_files: 
 clean: [packages.bib, bookdown.bbl]
 new_session: yes
