--- a/_output.yml
+++ b/_output.yml
@@ -14,7 +14,7 @@ bookdown::gitbook:
       
 bookdown::pdf_book:
   includes:
-    in_header: preamble.tex
+    in_header: [preamble.tex, google_analytics.html]
   latex_engine: xelatex
   citation_package: natbib
 bookdown::epub_book:
