--- a/_output.yml
+++ b/_output.yml
@@ -15,11 +15,11 @@ bookdown::gitbook:
         <li> &copy Mindy L. Mallory 2021</li>
         </ul>
       
-bookdown::pdf_book:
-  includes:
-    in_header: [preamble.tex, google_analytics.html]
-  latex_engine: xelatex
-  citation_package: natbib
+#bookdown::pdf_book:
+#  includes:
+#    in_header: [preamble.tex, google_analytics.html]
+#  latex_engine: xelatex
+#  citation_package: natbib
 
-bookdown::epub_book:
-  stylesheet: style.css
+#bookdown::epub_book:
+#  stylesheet: style.css
